--- a/app/src/main/res/layout/activity_mvm_with_retrofit.xml
+++ b/app/src/main/res/layout/activity_mvm_with_retrofit.xml
@@ -7,7 +7,7 @@
     tools:context=".project1.MvvmWithRetrofitActivity">
 
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="409dp"
