--- a/app/src/main/res/layout/fragment_recycler_list.xml
+++ b/app/src/main/res/layout/fragment_recycler_list.xml
@@ -6,9 +6,8 @@
     tools:context=".project1.fragments.RecyclerListFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:layout_height="match_parent" />
 </FrameLayout>
